Fix: Amount column too small to enter number

--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -13,3 +13,9 @@ $fa-font-path: "../node_modules/@fortawesome/fontawesome-free/webfonts";
   width: 0.1%;
   white-space: nowrap;
 }
+
+.minimized-amount {
+  min-width: 150px;
+  width: 0.1%;
+  white-space: nowrap;
+}
